# shibuya-pgmq-adapter

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  cabal.project  flake.nix  mina.kdl  mori.dhall  process-compose.yaml
.seihou/: manifest.json
agents/skills/release/: SKILL.md
docs/pgmq-adapter/: ARCHITECTURE.md  CONFIGURATION.md  INTERNALS.md  README.md  TEST_PLAN.md
docs/plans/: 1-migrate-to-shibuya-core-0.5-and-dlq-trace.md  2-upgrade-pgmq-hs-and-hs-opentelemetry.md  3-prototype-re-enabling-pgmq-prefetch-via-scoped-concunlift.md
docs/user/: pgmq-advanced.md  pgmq-dead-letter-queues.md  pgmq-getting-started.md  pgmq-topic-routing.md
mori/: repo-id
nix/: haskell.nix  pre-commit.nix  treefmt.nix
shibuya-pgmq-adapter/: CHANGELOG.md  shibuya-pgmq-adapter.cabal
shibuya-pgmq-adapter-bench/: README.md  shibuya-pgmq-adapter-bench.cabal
shibuya-pgmq-adapter-bench/app/: Endurance.hs
shibuya-pgmq-adapter-bench/bench/: BenchConfig.hs  BenchSetup.hs  Main.hs
shibuya-pgmq-adapter-bench/bench/Bench/: Ack.hs  Concurrent.hs  Fifo.hs  MultiQueue.hs  Raw.hs  Read.hs  Send.hs  Throughput.hs
shibuya-pgmq-adapter/src/Shibuya/Adapter/: Pgmq.hs
shibuya-pgmq-adapter/src/Shibuya/Adapter/Pgmq/: Config.hs  Convert.hs  Internal.hs
shibuya-pgmq-adapter/test/: Main.hs  TestUtils.hs  TmpPostgres.hs
shibuya-pgmq-adapter/test/Shibuya/Adapter/Pgmq/: ChaosSpec.hs  ConfigSpec.hs  ConvertSpec.hs  IntegrationSpec.hs  InternalSpec.hs  PropertySpec.hs
shibuya-pgmq-example/: README.md  shibuya-pgmq-example.cabal
shibuya-pgmq-example/app/: Consumer.hs  Simulator.hs
shibuya-pgmq-example/src/Example/: Config.hs  Database.hs  Telemetry.hs
shibuya-pgmq-example/src/Example/Types/: Notification.hs  Order.hs  Payment.hs
