cabal-version: 3.14
name: shibuya-pgmq-adapter-bench
version: 0.1.0.0
synopsis: Benchmarks for shibuya-pgmq-adapter
description:
  Comprehensive benchmarks for the shibuya-pgmq-adapter using tasty-bench.
  Includes send, read, ack, FIFO, multi-queue, throughput, concurrency,
  and raw pgmq-hasql comparison benchmarks.

author: Nadeem Bitar
maintainer: nadeem@gmail.com
license: MIT
build-type: Simple
category: Benchmarks

common warnings
  ghc-options: -Wall

benchmark shibuya-pgmq-adapter-bench
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  default-language: GHC2024
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -O2

  other-modules:
    Bench.Ack
    Bench.Concurrent
    Bench.Fifo
    Bench.MultiQueue
    Bench.Raw
    Bench.Read
    Bench.Send
    Bench.Throughput
    BenchConfig
    BenchSetup

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes

  build-depends:
    aeson ^>=2.2,
    async ^>=2.2,
    base ^>=4.21.0.0,
    bytestring,
    deepseq,
    effectful-core ^>=2.6,
    hasql ^>=1.10,
    hasql-pool ^>=1.4,
    pgmq-core ^>=0.2,
    pgmq-effectful ^>=0.2,
    pgmq-hasql ^>=0.2,
    pgmq-migration ^>=0.2,
    random ^>=1.2,
    shibuya-core,
    shibuya-pgmq-adapter,
    tasty-bench ^>=0.4,
    text ^>=2.1,
    time,
    vector ^>=0.13,

executable endurance-test
  import: warnings
  main-is: Endurance.hs
  hs-source-dirs: app
  default-language: GHC2024
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -T"
    -O2

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes

  build-depends:
    aeson ^>=2.2,
    async ^>=2.2,
    base ^>=4.21.0.0,
    bytestring,
    containers,
    effectful-core ^>=2.6,
    hasql ^>=1.10,
    hasql-pool ^>=1.4,
    pgmq-core ^>=0.2,
    pgmq-effectful ^>=0.2,
    pgmq-hasql ^>=0.2,
    pgmq-migration ^>=0.2,
    shibuya-core,
    shibuya-pgmq-adapter,
    stm,
    text ^>=2.1,
    time,
