cabal-version: 3.14
name: shibuya-pgmq-adapter
version: 0.3.0.0
synopsis: PGMQ adapter for the Shibuya queue processing framework
description:
  A Shibuya adapter that integrates with pgmq (PostgreSQL Message Queue)
  using the pgmq-hs client library. Provides visibility timeout-based
  leasing, automatic retry handling, and optional dead-letter queue support.

author: Nadeem Bitar
maintainer: nadeem@gmail.com
license: MIT
build-type: Simple
category: Concurrency, Database
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Shibuya.Adapter.Pgmq
    Shibuya.Adapter.Pgmq.Config
    Shibuya.Adapter.Pgmq.Convert

  other-modules:
    Shibuya.Adapter.Pgmq.Internal

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes

  build-depends:
    aeson ^>=2.2,
    base ^>=4.21.0.0,
    bytestring ^>=0.12,
    effectful-core ^>=2.6.1.0,
    pgmq-core ^>=0.2,
    pgmq-effectful ^>=0.2,
    pgmq-hasql ^>=0.2,
    shibuya-core ^>=0.3.0.0,
    stm ^>=2.5,
    streamly ^>=0.11,
    streamly-core ^>=0.3,
    text ^>=2.1.3,
    time ^>=1.14,
    vector ^>=0.13,

  hs-source-dirs: src
  default-language: GHC2024

test-suite shibuya-pgmq-adapter-test
  import: warnings
  default-language: GHC2024
  type: exitcode-stdio-1.0
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  hs-source-dirs:
    test
    src

  main-is: Main.hs
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes

  other-modules:
    Shibuya.Adapter.Pgmq
    Shibuya.Adapter.Pgmq.ChaosSpec
    Shibuya.Adapter.Pgmq.Config
    Shibuya.Adapter.Pgmq.ConfigSpec
    Shibuya.Adapter.Pgmq.Convert
    Shibuya.Adapter.Pgmq.ConvertSpec
    Shibuya.Adapter.Pgmq.IntegrationSpec
    Shibuya.Adapter.Pgmq.Internal
    Shibuya.Adapter.Pgmq.InternalSpec
    Shibuya.Adapter.Pgmq.PropertySpec
    TestUtils
    TmpPostgres

  build-depends:
    QuickCheck ^>=2.15,
    aeson,
    async ^>=2.2,
    base ^>=4.21.0.0,
    bytestring,
    effectful-core,
    ephemeral-pg,
    hasql ^>=1.10,
    hasql-pool ^>=1.4,
    hspec ^>=2.11,
    pgmq-core,
    pgmq-effectful,
    pgmq-hasql,
    pgmq-migration ^>=0.2,
    quickcheck-instances ^>=0.3,
    random,
    shibuya-core ^>=0.3.0.0,
    shibuya-pgmq-adapter,
    stm,
    streamly ^>=0.11,
    streamly-core ^>=0.3,
    text,
    time,
    vector,
