cabal-version: 3.14
name: shibuya-pgmq-example
version: 0.1.0.0
synopsis: Example application demonstrating Shibuya with PGMQ and OpenTelemetry
description:
  A real-world example demonstrating Shibuya queue processing with:
  - Multiple queue types (orders, payments, notifications)
  - PGMQ adapter with different configurations
  - OpenTelemetry tracing integration
  - Prometheus metrics exposure

author: Nadeem Bitar
maintainer: nadeem@gmail.com
license: MIT
build-type: Simple
category: Example

common warnings
  ghc-options: -Wall

common shared
  default-language: GHC2024
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes

library
  import: warnings, shared
  hs-source-dirs: src
  exposed-modules:
    Example.Config
    Example.Database
    Example.Telemetry
    Example.Types.Notification
    Example.Types.Order
    Example.Types.Payment

  build-depends:
    aeson ^>=2.2,
    base ^>=4.21.0.0,
    bytestring,
    effectful-core ^>=2.6,
    hasql ^>=1.10,
    hasql-pool ^>=1.4,
    hs-opentelemetry-api,
    hs-opentelemetry-otlp,
    hs-opentelemetry-sdk,
    pgmq-core ^>=0.2,
    pgmq-hasql ^>=0.2,
    pgmq-migration ^>=0.2,
    text ^>=2.1,

executable shibuya-pgmq-simulator
  import: warnings, shared
  main-is: Simulator.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    aeson ^>=2.2,
    base ^>=4.21.0.0,
    bytestring,
    effectful ^>=2.6.1.0,
    effectful-core ^>=2.6,
    hasql-pool ^>=1.4,
    hs-opentelemetry-api ^>=0.3,
    hs-opentelemetry-otlp,
    hs-opentelemetry-sdk,
    pgmq-core ^>=0.2,
    pgmq-effectful ^>=0.2,
    pgmq-hasql ^>=0.2,
    random ^>=1.2,
    shibuya-pgmq-example,
    text ^>=2.1,
    time,

executable shibuya-pgmq-consumer
  import: warnings, shared
  main-is: Consumer.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    aeson ^>=2.2,
    base ^>=4.21.0.0,
    effectful ^>=2.6.1.0,
    effectful-core ^>=2.6,
    hasql-pool ^>=1.4,
    hs-opentelemetry-api ^>=0.3,
    pgmq-core ^>=0.2,
    pgmq-effectful ^>=0.2,
    random ^>=1.2,
    shibuya-core,
    shibuya-metrics,
    shibuya-pgmq-adapter,
    shibuya-pgmq-example,
    text ^>=2.1,
    time,
    unix ^>=2.8,
