cabal-version: 3.12
name: shibuya-pgmq-example
version: 0.1.0.0
synopsis: Example application demonstrating Shibuya with PGMQ and OpenTelemetry
description:
  A real-world example demonstrating Shibuya queue processing with:
  - Multiple queue types (orders, payments, notifications)
  - PGMQ adapter with different configurations
  - OpenTelemetry tracing integration
  - Prometheus metrics exposure

author: Nadeem Bitar
maintainer: nadeem@gmail.com
license: MIT
build-type: Simple
category: Example

common warnings
  ghc-options: -Wall

common shared
  default-language: GHC2024
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes

library
  import: warnings, shared
  hs-source-dirs: src
  exposed-modules:
    Example.Config
    Example.Database
    Example.Telemetry
    Example.Types.Notification
    Example.Types.Order
    Example.Types.Payment

  build-depends:
    aeson ^>=2.2,
    base ^>=4.21.0.0,
    bytestring,
    effectful-core ^>=2.6,
    hasql ^>=1.10,
    hasql-pool ^>=1.4,
    hs-opentelemetry-api ^>=1.0,
    hs-opentelemetry-otlp ^>=1.0,
    hs-opentelemetry-sdk ^>=1.0,
    pg-migrate ^>=1.1,
    pgmq-core ^>=0.4,
    pgmq-hasql ^>=0.4,
    pgmq-migration ^>=0.4,
    text ^>=2.1,

executable shibuya-pgmq-simulator
  import: warnings, shared
  main-is: Simulator.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    aeson ^>=2.2,
    base ^>=4.21.0.0,
    bytestring,
    effectful ^>=2.6.1.0,
    effectful-core ^>=2.6,
    hasql-pool ^>=1.4,
    hs-opentelemetry-api ^>=1.0,
    hs-opentelemetry-otlp ^>=1.0,
    hs-opentelemetry-sdk ^>=1.0,
    pgmq-core ^>=0.4,
    pgmq-effectful ^>=0.4,
    pgmq-hasql ^>=0.4,
    random ^>=1.2,
    shibuya-pgmq-example,
    text ^>=2.1,
    time,

executable shibuya-pgmq-consumer
  import: warnings, shared
  main-is: Consumer.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    aeson ^>=2.2,
    base ^>=4.21.0.0,
    containers ^>=0.7,
    effectful ^>=2.6.1.0,
    effectful-core ^>=2.6,
    hasql-pool ^>=1.4,
    hs-opentelemetry-api ^>=1.0,
    pgmq-core ^>=0.4,
    pgmq-effectful ^>=0.4,
    random ^>=1.2,
    shibuya-core ^>=0.8.0.1,
    shibuya-metrics ^>=0.8.0.1,
    shibuya-pgmq-adapter,
    shibuya-pgmq-example,
    text ^>=2.1,
    time,
    unix ^>=2.8,
